WV-721 Making sure product picker is always displayed correctly on mobile

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -85,8 +85,10 @@
     #productsHolder li.third {
         display:none;
     }
-    #wvlogo {
 
+    #wv-logo {
+        background-position:0%;
+        width:54px;
     }
 }
 
